update author info and link

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -23,13 +23,13 @@ bibliography: 2024-12-06-intro.bib
 
 # 如需添加作者信息，在下方添加authors字段
 authors:
-  - name: Qiang Liu
+  - name: Runlong Liao
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
-  - name: Runlong Liao
-  - name: Xixi Hu
+  - name: Qiang Liu
   - name: Bo Liu
+  - name: Xixi Hu
 
 # 如果有文献，请指定bibliography文件
 # bibliography: 2024-12-11-distill.bib
@@ -48,7 +48,9 @@ toc:
 ## Overview
 
 
-This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow Lecture Notes]() and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
+This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow Lecture Notes](https://github.com/lqiang67/rectified-flow/tree/main/pdf) and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
+
+## ODEs
 
 Generative modeling can be formulated as finding a computational procedure that transforms a noise distribution, denoted by $$\pi_0$$, into the unknown data distribution $$\pi_1$$. In flow models, this procedure is represented by an ordinary differential equation (ODE):
 
