--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -21,13 +21,13 @@ typograms: true
 bibliography: 2024-12-10-samplers.bib
 
 authors:
-  - name: Qiang Liu
+  - name: Xixi Hu
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
-  - name: Xixi Hu
   - name: Runlong Liao
   - name: Bo Liu
+  - name: Qiang Liu
 
 # bibliography: 2024-12-11-distill.bib
 
@@ -48,7 +48,7 @@ toc:
 
 ## Overview
 
-In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow Lecture Notes]().
+In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow Lecture Notes](https://github.com/lqiang67/rectified-flow/tree/main/pdf).
 
 ## Stochastic Solvers: Guardrails for Generative Models
 
