--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: Rectified Flow: An Introduction
+title: "Rectified Flow: An Introduction"
 description: A First Introduction to Rectified Flow
 teaser_image: /assets/images/rectified_flow_overview.png
 teaser_image_alt: "Overview of Rectified Flow"
@@ -94,9 +94,10 @@ To construct a flow transporting $$\pi_0$$ to $$\pi_1$$, let us assume that we a
 
 Rectified flow works in the following ways:
 
-- **Build Interpolation:**  
+- **Build Interpolation:**
    We build an interpolation process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$ that smoothly interpolates between $$X_0$$ and $$X_1$$.
   Given the perference on straight trajectories, there seems no immediate reason to not use the canonical straight-line interpolation: 
+
   $$
   X_t = t X_1 + (1 - t) X_0.
   $$
@@ -117,6 +118,7 @@ This issue can be resolved if we can convert $$\{X_t\}$$ somehow into a causal O
 Note that since we only care about the output $$X_1$$, we only need to match the marginal distributions. There is no need to match the trajectory-wise joint distribution!
 
 Perhaps surprisingly, marginal matching can be achieved by simply training the velocity field $$v_t$$ of the ODE model $$\dot{Z}_t = v_t(Z_t)$$ to match the slope $$\dot{X}_t$$ of the interpolation process via:
+
 $$
 \min_v \int_0^1 \mathbb{E} \left[ \left\| \dot{X}_t - v_t(X_t) \right\|^2 \right] \mathrm dt. \tag{3}
 $$
@@ -126,29 +128,32 @@ The theoretical minimum is achieved by:
 $$
 v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right],
 $$
+
 which is the condition expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$.
 
 
-> **Expectation Notation**
->
-> Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is $$\mathbb{E}_{\omega \sim \mathbb{P}} \left[ \left\| \partial_t X(t, \omega) - v_t(X(t, \omega)) \right\|^2 \right].$$
->
->In writing, we often omit the random seed. Whenever we take the expectation, it averages out all random sources inside the brackets except for those explicitly included in the conditioning.
+### Expectation Notation
+
+Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
+
+$$\mathbb{E}_{\omega \sim \mathbb{P}} \left[ \left\| \partial_t X(t, \omega) - v_t(X(t, \omega)) \right\|^2 \right].$$
+
+In writing, we often omit the random seed. Whenever we take the expectation, it averages out all random sources inside the brackets except for those explicitly included in the conditioning.
 
 
-> **Definition: Rectified Flow.**
->
-> For any time-differential stochastic process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$, we call the ODE process:
->
-> $$
-> \dot{Z}_t = v_t^*(Z_t) \quad \text{with} \quad v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right],
-> $$
->
-> and initialization $$Z_0 = X_0$$ the **rectified flow** induced by $$\{X_t\}$$. We denote it as:
->
-> $$
-> \{Z_t\} = \text{RectFlow}(\{X_t\}).
-> $$
+### Definition: Rectified Flow
+
+For any time-differential stochastic process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$, we call the ODE process:
+
+$$
+\dot{Z}_t = v_t^*(Z_t) \quad \text{with} \quad v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right],
+$$
+
+and initialization $$Z_0 = X_0$$ the **rectified flow** induced by $$\{X_t\}$$. We denote it as:
+
+$$
+\{Z_t\} = \text{RectFlow}(\{X_t\}).
+$$
 
 With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
 
@@ -176,20 +181,21 @@ thus providing the unique update direction required by ODEs.
 
 What makes rectified flow $$\{Z_t\}$$ useful is that it preserves the marginal distributions of $$\{X_t\}$$ at each point while resulting in a "better" coupling $$(Z_0, Z_1)$$ in terms of optimal transport:
 
-#### 1. Marginal Preservation
+### 1. Marginal Preservation
 
 The $$\{X_t\}$$ and its rectified flow $$\{Z_t\}$$ share the same marginal distributions at each time $$t \in [0, 1]$$, that is:
 
 $$
 \text{Law}(Z_t) = \text{Law}(X_t), \quad \forall t \in [0, 1],
 $$
+
 where $$\text{Law}(X_t)$$ denotes the probability distribution (or law)  of random variable $$X_t$$.
 
 <div class="l-body">
   <img src="/assets/img/flow_in_out.png" alt="cross" style="max-width:100%;" />
 </div>
 
-#### 2. Transport Cost
+### 2. Transport Cost
 
 The start-end pairs $$(Z_0, Z_1)$$ from the rectified flow $$\{Z_t\}$$ guarantee to yield no larger transport cost than $$(X_0, X_1)$$, simultaneously for all convex cost functions $$c$$:
 
