Update interpolation blog

--- a/assets/bibliography/2024-12-10-interpolation.bib
+++ b/assets/bibliography/2024-12-10-interpolation.bib
@@ -1,3 +1,10 @@
+@article{liu2022flow,
+  title={Flow straight and fast: Learning to generate and transfer data with rectified flow},
+  author={Liu, Xingchao and Gong, Chengyue and Liu, Qiang},
+  journal={arXiv preprint arXiv:2209.03003},
+  year={2022}
+}
+
 @article{karras2022elucidating,
   title={Elucidating the design space of diffusion-based generative models},
   author={Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
@@ -26,4 +33,34 @@
   title = {Diffusion Meets Flow Matching: Two Sides of the Same Coin},
   year = {2024},
   url  = {https://diffusionflow.github.io/}
+}
+
+@article{lipman2022flow,
+  title={Flow matching for generative modeling},
+  author={Lipman, Yaron and Chen, Ricky TQ and Ben-Hamu, Heli and Nickel, Maximilian and Le, Matt},
+  journal={arXiv preprint arXiv:2210.02747},
+  year={2022}
+}
+
+@article{albergo2023stochastic,
+  title={Stochastic interpolants: A unifying framework for flows and diffusions},
+  author={Albergo, Michael S and Boffi, Nicholas M and Vanden-Eijnden, Eric},
+  journal={arXiv preprint arXiv:2303.08797},
+  year={2023}
+}
+
+@inproceedings{nichol2021improved,
+  title={Improved denoising diffusion probabilistic models},
+  author={Nichol, Alexander Quinn and Dhariwal, Prafulla},
+  booktitle={International conference on machine learning},
+  pages={8162--8171},
+  year={2021},
+  organization={PMLR}
+}
+
+@article{song2020denoising,
+  title={Denoising diffusion implicit models},
+  author={Song, Jiaming and Meng, Chenlin and Ermon, Stefano},
+  journal={arXiv preprint arXiv:2010.02502},
+  year={2020}
 }
