--- a/assets/bibliography/2024-12-06-intro.bib
+++ b/assets/bibliography/2024-12-06-intro.bib
@@ -1,8 +1,13 @@
-@article{Liu2022FlowSA,
-  title={Flow Straight and Fast: Learning to Generate and Transfer Data with Rectified Flow},
-  author={Xingchao Liu and Chengyue Gong and Qiang Liu},
-  journal={ArXiv},
-  year={2022},
-  volume={abs/2209.03003},
-  url={https://api.semanticscholar.org/CorpusID:252111177}
+@article{liu2022flow,
+  title={Flow straight and fast: Learning to generate and transfer data with rectified flow},
+  author={Liu, Xingchao and Gong, Chengyue and Liu, Qiang},
+  journal={arXiv preprint arXiv:2209.03003},
+  year={2022}
+}
+
+@article{liu2022rectified,
+  title={Rectified flow: A marginal preserving approach to optimal transport},
+  author={Liu, Qiang},
+  journal={arXiv preprint arXiv:2209.14577},
+  year={2022}
 }
