update sde post with euler sde comparison

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -98,6 +98,12 @@ The figure below illustrates the score function $$\nabla \log \rho_t$$ along the
   <img src="/assets/img/score_function_on_sde_traj.png" alt="cross" style="max-width:50%;" />
 </div>
 
+Applying Langevin dynamics with a stochastic sampler reduces errors compared to using a deterministic sampler, such as Euler. As shown below, the stochastic sampler achieves improved results due to this correction.
+
+<div class="l-body">
+  <img src="/assets/img/euler_sde_compare.png" alt="cross" style="max-width:100%;" />
+</div>
+
 
 ## SDEs with Closed Form Score Functions
 
