--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -148,38 +148,34 @@ $$
 
 which is the condition expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$.
 
-> **Expectation Notation**
-> 
-> Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
-> 
+> **Expectation Notation.** Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
 > $$
 > \mathbb{E}_{\omega \sim \mathbb{P}} \left[ \left\| \partial_t X(t, \omega) - v_t(X(t, \omega)) \right\|^2 \right].
->$$
+> $$
 > 
 > In writing, we often omit the random seed. Whenever we take the expectation, it averages out all random sources inside the brackets except for those explicitly included in the conditioning.
 {: .theorem}
 
+With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
 
-> **Rectified Flow**
-> 
-> For any time-differential stochastic process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$, we call the ODE process:
+$$
+\min_v \int_0^1 \mathbb{E} \left[ \| \dot{X}_t - v_t(X_t) \|^2 \right] \mathrm dt, \quad X_t = t X_1 + (1 - t) X_0.
+$$
+
+> **Rectified Flow.** For any time-differential stochastic process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$, we call the ODE process:
 >
 > $$
-> \dot{Z}_t = v_t^*(Z_t) \quad \text{with} \quad v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right],
+> \dot{Z}_t = v_t^*(Z_t) \quad \text{with} \quad v_t^*(x) = \mathbb{E} \left[ \dot{X}_t \mid X_t = x \right], \quad Z_0 = X_0
 > $$
 >
-> and initialization $$Z_0 = X_0$$ the **rectified flow** induced by $$\{X_t\}$$. We denote it as:
+> the **rectified flow** induced by $$\{X_t\}$$. We denote it as:
 >
 > $$
 > \{Z_t\} = \texttt{Rectify}(\{X_t\}).
 > $$
 >
-> With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
->
-> $$
-> \min_v \int_0^1 \mathbb{E} \left[ \| \dot{X}_t - v_t(X_t) \|^2 \right] \mathrm dt, \quad X_t = t X_1 + (1 - t) X_0. \tag{3}
-> $$
 {: .definition}
+
 
 In practice, the optimization in (3) can be efficiently solved even for large AI models when $$v$$ is parameterized as modern deep neural nets. This is achieved by leveraging off-the-shelf optimizers with stochastic gradients, computed by drawing pairs $$(X_0, X_1)$$ from data, sampling $$t$$ uniformly in $$[0, 1]$$, and then computing the corresponding $$(X_t, \dot{X}_t)$$ using the interpolation formula.
 
