Change intro into featured

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -7,7 +7,7 @@ teaser_image_alt: "Overview of Rectified Flow"
 tags: tutorial
 giscus_comments: true
 date: 2024-12-06 10:00:00
-featured: false
+featured: true
 mermaid:
   enabled: true
   zoomable: true
