--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -122,8 +122,7 @@ Rectified flow works in the following ways:
     </iframe>
     <figcaption>
       <a href="#figure-2">Figure 2</a>.
-      The straight interpolation between \( X_0 \) and \( X_1 \). 
-      However, this interpolation process is not "simulatable" because at intermediate crossing points it is unclear in which direction to proceed.
+      The straight interpolation that "bridge" between \( X_0 \) and \( X_1 \). 
     </figcaption>
   </figure>
 </div>
