--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -19,7 +19,7 @@ chart:
   vega_lite: true
 tikzjax: true
 typograms: true
-bibliography: 2024-12-06-intro.bib
+bibliography: reference.bib
 
 # 如需添加作者信息，在下方添加authors字段
 authors:
@@ -31,17 +31,16 @@ authors:
   - name: Bo Liu
   - name: Xixi Hu
 
-# 如果有文献，请指定bibliography文件
-# bibliography: 2024-12-11-distill.bib
-
 # 可选的目录配置
 toc:
   - name: "Overview"
+  - name: "Problem: Learning Flow Generative Models"
   - name: "Rectified Flow"
   - name: "Reflow"
 ---
 
 <!-- 
+
 <div class="hero">
   <img src="/assets/img/teaser_post1.png" alt="Rectified Flow Overview" style="width: 100%; max-height: 500px; object-fit: cover; border-radius: 10px; margin-bottom: 20px;">
 </div>
@@ -50,9 +49,9 @@ toc:
 ## Overview
 
 This blog provides a brief introduction to rectified flow, based on Chapter 1 of these [lecture notes](https://github.com/lqiang67/rectified-flow/tree/main/pdf). 
-For more introduction, please refer to the original papers<d-cite key="liu2022flow"></d-cite>, <d-cite key="liu2022rectified"></d-cite>  and these [blogs](https://www.cs.utexas.edu/~lqiang/rectflow/html/intro.html). 
+For more introduction, please refer to the original papers<d-cite key="liu2022flow,liu2022rectified"></d-cite> and these [blogs](https://www.cs.utexas.edu/~lqiang/rectflow/html/intro.html). 
 
-## ODEs
+## Problem: Learning Flow Generative Models
 
 Generative modeling can be formulated as finding a computational procedure that transforms a noise distribution, denoted by $$\pi_0$$, into an unknown data distribution $$\pi_1$$ observed through data. In flow models, this procedure is represented by an ordinary differential equation (ODE):
 
