--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -29,7 +29,7 @@ authors:
   - name: Bo Liu
   - name: Qiang Liu
 
-# bibliography: 2024-12-11-distill.bib
+# bibliography: reference.bib
 
 # 可选的目录配置
 toc:
@@ -62,7 +62,7 @@ We will explore these questions in this blog. For a more detailed discussion, se
 ## Stochastic Samplers = RF + Langevin
 
 Given a coupling $$(X_0, X_1)$$ of noise and data points, rectified flow defines an interpolation process, such as $$X_t = t X_1 + (1 - t) X_0$$, and "rectifies" or "causalizes" it to yield an ODE model $$\mathrm{d} Z_t = v_t(Z_t) \, \mathrm{d} t$$ initialized from $$Z_0 = X_0.$$ 
-The velocity field is given by $$v_t(z) = \mathbb{E}[\dot{X}_t \mid X_t = z],$$ which is estimated by minimizing the loss $$\mathbb{E}_{t, X_0, X_1} \left[ \left\| \dot{X}_t - v_t(X_t) \right\|^2 \right].$$
+The velocity field is given by $$v_t(z) = \mathbb{E}[\dot{X}_t \mid X_t = z],$$ which is estimated by minimizing the loss $$\mathbb{E}_{t, X_0, X_1} [ \| \dot{X}_t - v_t(X_t) \|^2 ].$$
 
 The idea is that, by the construction of the velocity field $$v_t$$, the distribution of $$Z_t$$ on the ODE trajectory matches the distribution of $$X_t$$ on the interpolation path at each time $$t$$. As a result, the final output $$Z_1$$ of the ODE follows the same distribution as $$X_1$$, the target data distribution. This follows an inductive principle: if the distributions of $$X_t$$ and $$Z_t$$ match up to a given time, the construction of $$v_t$$ ensures they will continue to match at the next (infinitesimal) step. By being "scheduled to do the right thing at the right time," the process guarantees the correct final result.
 
@@ -121,7 +121,7 @@ On the other hand, the RF velocity is given by
 
 $$
 v_t(x) = \mathbb{E}[\dot{X}_t \mid X_t = x] = \mathbb{E}[\dot{\alpha}_t X_1 + \dot{\beta}_t X_0 \mid X_t = x],
-$$ 
+$$
 
 where $$X_t = \alpha_t X_1 + \beta_t X_0$$. 
 
@@ -129,7 +129,7 @@ Using this, we can express $$\mathbb{E}[X_0 \mid X_t = x]$$ in terms of $$v_t(x)
 
 $$
 \nabla \log \rho_t(x) = \frac{1}{\lambda_t \beta_t} \left( \alpha_t v_t(x) - \dot{\alpha}_t x \right),
-$$ 
+$$
 
 where $$\lambda_t = \dot{\alpha}_t \beta_t - \alpha_t \dot{\beta}_t$$. 
 
