--- a/assets/bibliography/reference.bib
+++ b/assets/bibliography/reference.bib
@@ -5,6 +5,13 @@
   year={2022}
 }
 
+@article{liu2022rectified,
+  title={Rectified flow: A marginal preserving approach to optimal transport},
+  author={Liu, Qiang},
+  journal={arXiv preprint arXiv:2209.14577},
+  year={2022}
+}
+
 @article{karras2022elucidating,
   title={Elucidating the design space of diffusion-based generative models},
   author={Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
