--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -73,18 +73,19 @@ where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introd
 
 <div class="l-body">
   <figure id="figure-1">
-    <iframe src="{{ '/assets/plotly/intro_euler_approximation_with_arrows.html' | relative_url }}" 
+    <iframe src="{{ '/assets/plotly/intro_euler_method.html' | relative_url }}" 
           frameborder="0" 
           scrolling="no" 
-          height="480px" 
-          width="100%">
+          height="310px" 
+          width="80%">
     </iframe>
     <figcaption>
       <a href="#figure-1">Figure 1</a>.
-      Comparing the true continuous ODE trajectory with its piecewise linear approximation obtained via Euler's method, showing the error introduced by discretization.
+      Illustration of error accumulation in Euler method trajectories, starting from various initial points and deviating from the true solution curve over time.
     </figcaption>
   </figure>
 </div>
+
 
 
 The ideal scenario arises when the ODE follows straight-line trajectories, in which case Euler approximation yields zero discretization error regardless of the choice of step sizes. In such cases, the ODE, up to time reparameterization, should satisfy:
@@ -111,22 +112,6 @@ Rectified flow works in the following ways:
   
   Here the interpolation $$\{X_t\}$$ is a stochastic process generated in an **"anchor-and-bridge"** way: we first sample the endpoints $$X_0$$ and $$X_1$$ and then sample the intermediate trajectory connecting them. Such processes are also known as bridge processes, where the intermediate values of $$X_t$$ smoothly "bridge" the distribution between $$X_0$$ and $$X_1$$.
 
-<div class="l-body">
-  <figure id="figure-2">
-    <iframe src="{{ '/assets/plotly/intro_straight_interp.html' | relative_url }}" 
-            frameborder="0" 
-            scrolling="no" 
-            height="630px" 
-            width="100%">
-    </iframe>
-    <figcaption>
-      <a href="#figure-2">Figure 2</a>.
-      The straight interpolation that "bridge" between \( X_0 \) and \( X_1 \). 
-    </figcaption>
-  </figure>
-</div>
-
-
 
 - **Marginal Matching:**  
   
@@ -149,6 +134,7 @@ $$
 which is the condition expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$.
 
 > **Expectation Notation.** Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
+> 
 > $$
 > \mathbb{E}_{\omega \sim \mathbb{P}} \left[ \left\| \partial_t X(t, \omega) - v_t(X(t, \omega)) \right\|^2 \right].
 > $$
@@ -156,8 +142,23 @@ which is the condition expectation of the slope $$\dot{X}_t$$ for all the interp
 > In writing, we often omit the random seed. Whenever we take the expectation, it averages out all random sources inside the brackets except for those explicitly included in the conditioning.
 {: .theorem}
 
-With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
+<div class="l-page-outset">
+  <figure id="figure-2">
+    <iframe src="{{ '/assets/plotly/intro_rf_three_in_one.html' | relative_url }}" 
+            frameborder="0" 
+            scrolling="no" 
+            height="460px" 
+            width="100%">
+    </iframe>
+    <figcaption>
+      <a href="#figure-2">Figure 2</a>.
+      Rectified flow between \(\pi_0\) and \(\pi_1\). Blue and pink lines are the trajectories colored based on which mode of they are associated with for visualization.
+    </figcaption>
+  </figure>
+</div>
+In Fig.2(a), different trajectories of the interpolation process $$\{X_t\}$$ can intersect, causing multiple possible values of $$\dot{X}_t$$ for the same point $$X_t$$. In contrast, by defining an ODE $$\dot{Z}_t = v_t^*(Z_t)$$, the update direction $$\dot{Z}_t$$ at each point $$Z_t$$ is uniquely determined by $$Z_t$$. Hence in Fig.2(b), at these intersection points where the direction is otherwise uncertain, the ODE “derandomizes” the update direction by following the conditional expectation $$\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t].$$
 
+With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
 $$
 \min_v \int_0^1 \mathbb{E} \left[ \| \dot{X}_t - v_t(X_t) \|^2 \right] \mathrm dt, \quad X_t = t X_1 + (1 - t) X_0.
 $$
@@ -179,23 +180,6 @@ $$
 
 In practice, the optimization in (3) can be efficiently solved even for large AI models when $$v$$ is parameterized as modern deep neural nets. This is achieved by leveraging off-the-shelf optimizers with stochastic gradients, computed by drawing pairs $$(X_0, X_1)$$ from data, sampling $$t$$ uniformly in $$[0, 1]$$, and then computing the corresponding $$(X_t, \dot{X}_t)$$ using the interpolation formula.
 
-<div class="l-body">
-  <figure id="figure-3">
-    <iframe src="{{ '/assets/plotly/intro_1rf.html' | relative_url }}" 
-            frameborder="0" 
-            scrolling="no" 
-            height="630px" 
-            width="100%">
-    </iframe>
-    <figcaption>
-      <a href="#figure-3">Figure 3</a>.
-      In the interpolation process \(\{X_t\}\), different trajectories can intersect, causing multiple possible values of \(\dot{X}_t\) for the same point \(X_t\). 
-      In contrast, by defining an ODE \(\dot{Z}_t = v_t^*(Z_t)\), the update direction \(\dot{Z}_t\) at each point \(Z_t\) is uniquely determined by \(Z_t\). 
-      Hence, at these intersection points where the direction is otherwise uncertain, the ODE “derandomizes” the update direction by following the conditional expectation 
-      \(\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t]\).
-    </figcaption>
-  </figure>
-</div>
 
 What makes rectified flow $$\{Z_t\}$$ useful is that it preserves the marginal distributions of $$\{X_t\}$$ at each point while resulting in a "better" coupling $$(Z_0, Z_1)$$ in terms of optimal transport:
 
@@ -220,6 +204,10 @@ What makes rectified flow $$\{Z_t\}$$ useful is that it preserves the marginal d
    $$
    \mathbb{E} \left[ c(Z_1 - Z_0) \right] \leq \mathbb{E} \left[ c(X_1 - X_0) \right], \quad \forall \text{convex } c : \mathbb{R}^d \to \mathbb{R}.
    $$
+   
+   <div class="l-body">
+     <img src="/assets/img/flow_transport_cost.png" alt="cost" style="max-width:100%;" />
+   </div>
 
 ## Reflow
 
@@ -251,17 +239,4 @@ which suggests that the average of $$S(\{Z_t^k\})$$ in the first $$K$$ steps dec
 
 Hence, we would obtain perfectly straight-line dynamics in the limit of $$k \to +\infty$$. Note that reflow can begin from any coupling $$(X_0, X_1)$$, so it provides a general procedure for straightening and thus speeding up any given dynamics while preserving the marginals.
 
-<div class="l-body">
-  <figure id="figure-4">
-    <iframe src="{{ '/assets/plotly/intro_2rf.html' | relative_url }}" 
-            frameborder="0" 
-            scrolling="no" 
-            height="630px" 
-            width="100%">
-    </iframe>
-    <figcaption>
-      <a href="#figure-4">Figure 4</a>.
-      This figure shows the a single-step result of applying reflow to the 1-rf learned by an MLP. Most particles are effectively transported.
-    </figcaption>
-  </figure>
-</div>
+As shown in Fig.2 (b), after applying the "Reflow" operation, the trajectories become starighter than the original rectified flow $$Z_t$$.
