--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
 title: "Rectified Flow: An Introduction"
-description: A First Introduction to Rectified Flow
+description: Learning Flow Generative Models while Favoring Straightness
 teaser_image: /assets/images/rectified_flow_overview.png
 teaser_image_alt: "Overview of Rectified Flow"
 tags: tutorial
@@ -134,7 +134,15 @@ $$
 
 which is the condition expectation of the slope $$\dot{X}_t$$ for all the interpolation trajectories passing through a given point $$X_t = x$$.
 
-> **Expectation Notation.** Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the random seed $$\omega = (X_0, X_1)$$ represents the endpoints. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
+With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
+$$
+\min_v \int_0^1 \mathbb{E} \left[ \| \dot{X}_t - v_t(X_t) \|^2 \right] \mathrm dt, \quad X_t = t X_1 + (1 - t) X_0.
+$$
+
+In practice, the optimization in (3) can be efficiently solved even for large AI models when $$v$$ is parameterized as modern deep neural nets. This is achieved by leveraging off-the-shelf optimizers with stochastic gradients, computed by drawing pairs $$(X_0, X_1)$$ from data, sampling $$t$$ uniformly in $$[0, 1]$$, and then computing the corresponding $$(X_t, \dot{X}_t)$$ using the interpolation formula.
+
+
+> **Expectation Notation.** Recall that a stochastic process $$X_t = X(t, \omega)$$ is a measurable function of time $$t$$ and a random seed $$\omega$$ (with, say, distribution $$\mathbb{P}$$). In the case above, the end points are the random seed, i.e., $$\omega = (X_0, X_1)$$. The slope is given by $$\dot{X}_t = \partial_t X(t, \omega)$$, which is also a function of the same random seed. The expectation in the loss, written in full, is 
 > 
 > $$
 > \mathbb{E}_{\omega \sim \mathbb{P}} \left[ \left\| \partial_t X(t, \omega) - v_t(X(t, \omega)) \right\|^2 \right].
@@ -157,12 +165,14 @@ which is the condition expectation of the slope $$\dot{X}_t$$ for all the interp
     </figcaption>
   </figure>
 </div>
-In Fig.2(a), different trajectories of the interpolation process $$\{X_t\}$$ can intersect, causing multiple possible values of $$\dot{X}_t$$ for the same point $$X_t$$. In contrast, by defining an ODE $$\dot{Z}_t = v_t^*(Z_t)$$, the update direction $$\dot{Z}_t$$ at each point $$Z_t$$ is uniquely determined by $$Z_t$$. Hence in Fig.2(b), at these intersection points where the direction is otherwise uncertain, the ODE “derandomizes” the update direction by following the conditional expectation $$\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t].$$
+We illustrate the intuition in Fig.2(a):
 
-With the straight interpolation $$X_t = t X_1+(1-t)X_0$$, we have $$\dot{X}_t = X_1 - X_0$$ by taking the derivative of $$X_t$$ with respect to $$t$$. It yields:
-$$
-\min_v \int_0^1 \mathbb{E} \left[ \| \dot{X}_t - v_t(X_t) \|^2 \right] \mathrm dt, \quad X_t = t X_1 + (1 - t) X_0.
-$$
+- Different trajectories of the interpolation process $$\{X_t\}$$ can intersect, causing multiple possible values of $$\dot{X}_t$$ for the same point $$X_t$$. 
+  
+- In contrast, by defining an ODE $$\dot{Z}_t = v_t^*(Z_t)$$, the update direction $$\dot{Z}_t$$ at each point $$Z_t$$ is uniquely determined by $$Z_t$$. 
+  
+- Hence in Fig.2(b), at these intersection points where the direction is otherwise uncertain, the ODE “derandomizes” the update direction by following the conditional expectation $$\displaystyle v_t^*(X_t) = \mathbb{E}[\dot{X}_t \mid X_t].$$
+
 
 > **Rectified Flow.** For any time-differential stochastic process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$, we call the ODE process:
 >
@@ -177,9 +187,6 @@ $$
 > $$
 >
 {: .definition}
-
-
-In practice, the optimization in (3) can be efficiently solved even for large AI models when $$v$$ is parameterized as modern deep neural nets. This is achieved by leveraging off-the-shelf optimizers with stochastic gradients, computed by drawing pairs $$(X_0, X_1)$$ from data, sampling $$t$$ uniformly in $$[0, 1]$$, and then computing the corresponding $$(X_t, \dot{X}_t)$$ using the interpolation formula.
 
 
 What makes rectified flow $$\{Z_t\}$$ useful is that it preserves the marginal distributions of $$\{X_t\}$$ at each point while resulting in a "better" coupling $$(Z_0, Z_1)$$ in terms of optimal transport:
@@ -241,3 +248,5 @@ which suggests that the average of $$S(\{Z_t^k\})$$ in the first $$K$$ steps dec
 Hence, we would obtain perfectly straight-line dynamics in the limit of $$k \to +\infty$$. Note that reflow can begin from any coupling $$(X_0, X_1)$$, so it provides a general procedure for straightening and thus speeding up any given dynamics while preserving the marginals.
 
 As shown in Fig.2 (b), after applying the "Reflow" operation, the trajectories become starighter than the original rectified flow $$Z_t$$.
+
+> Intuitively, reflow resembles shortcut learning in humans: once we solve a problem for the first time, we learn to go directly to the solution, enabling us to solve it more quickly the next time. 
