add flux text rendering

--- a/assets/bibliography/reference.bib
+++ b/assets/bibliography/reference.bib
@@ -78,3 +78,10 @@
   journal={arXiv preprint arXiv:2011.13456},
   year={2020}
 }
+
+@article{hu2024amo,
+  title={AMO Sampler: Enhancing Text Rendering with Overshooting},
+  author={Hu, Xixi and Xu, Keyang and Liu, Bo and Liu, Qiang and Fei, Hongliang},
+  journal={arXiv preprint arXiv:2411.19415},
+  year={2024}
+}
