Adjust spherical RF on unit circle

--- a/assets/plotly/all_flow_are_one_flow.ipynb
+++ b/assets/plotly/all_flow_are_one_flow.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
     "\n",
     "set_seed(0)\n",
     "n_samples = 50000\n",
-    "pi_0 = dist.MultivariateNormal(torch.zeros(2, device=device), torch.eye(2, device=device)*0.09)\n",
-    "pi_1 = TwoPointGMM(x=15.0, y=2, std=0.3)\n",
+    "pi_0 = dist.MultivariateNormal(torch.tensor([-5., 0.], device=device), torch.eye(2, device=device)*0.09)\n",
+    "pi_1 = TwoPointGMM(x=3.37, y=3.69, std=0.3)\n",
     "D0 = pi_0.sample([n_samples])\n",
     "D1, labels = pi_1.sample_with_labels([n_samples])\n",
     "labels.tolist()\n",
@@ -229,18 +229,46 @@
     "\tinterp=spherical_interp,\n",
     "\tsource_distribution=pi_0,\n",
     "\tdevice=device,\n",
-    ")\n",
-    "\n",
-    "set_seed(0)\n",
-    "rf_trainer(rectified_flow=straight_rf, label=\"straight interp\")\n",
-    "\n",
-    "set_seed(0)\n",
-    "rf_trainer(rectified_flow=spherical_rf, label=\"spherical interp\")"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_seed(0)\n",
+    "rf_trainer(rectified_flow=straight_rf, label=\"straight interp\")\n",
+    "\n",
+    "set_seed(0)\n",
+    "rf_trainer(rectified_flow=spherical_rf, label=\"spherical interp\")\n",
+    "\n",
+    "num_samples = 250\n",
+    "num_steps = 100\n",
+    "\n",
+    "euler_sampler_straight = EulerSampler(straight_rf, num_steps=num_steps, num_samples=num_samples)\n",
+    "euler_sampler_straight.sample_loop(seed=0)\n",
+    "\n",
+    "euler_sampler_spherical = EulerSampler(spherical_rf, num_steps=num_steps, num_samples=num_samples)\n",
+    "euler_sampler_spherical.sample_loop(seed=0)\n",
+    "\n",
+    "# Straight Converted to Spherical   v.s.   Original Straight RF\n",
+    "# zoom in to see they are really close\n",
+    "visualize_2d_trajectories_plotly(\n",
+    "\ttrajectories_dict={\n",
+    "        \"Straight\": euler_sampler_straight.trajectories, \n",
+    "        \"Spherical\": euler_sampler_spherical.trajectories\n",
+    "    },\n",
+    "\tD1_gt_samples=D1[:1000],\n",
+    "\tnum_trajectories=50,\n",
+    "\ttitle=\"Euler Sampler\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +284,7 @@
    "source": [
     "# Try different num_steps, e.g. [5, 10, 50, 100, 500]\n",
     "num_samples = 250\n",
-    "num_steps = 200\n",
+    "num_steps = 100\n",
     "\n",
     "euler_sampler_straight = EulerSampler(straight_rf, num_steps=num_steps)\n",
     "euler_sampler_straight.sample_loop(seed=0, num_samples=num_samples)\n",
@@ -282,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +338,7 @@
     "\n",
     "    # Prepare color mapping for trajectories\n",
     "    particle_colors = [\n",
-    "        \"#1E90FF\",\n",
+    "        # \"#1E90FF\",\n",
     "        \"#FF69B4\",\n",
     "        \"#7B68EE\",\n",
     "        \"#FF8C00\",\n",
@@ -323,7 +351,7 @@
     "    ]\n",
     "\n",
     "    trajectory_colors = [\n",
-    "        \"#8ABDE5\",\n",
+    "        # \"#8ABDE5\",\n",
     "        \"#E09CAF\",\n",
     "        \"#B494E1\",\n",
     "        \"#E5B680\",\n",
@@ -464,7 +492,7 @@
     "    delta_y = 0.02 * (max_y - min_y) if (max_y > min_y) else 1.0\n",
     "\n",
     "    fig.update_xaxes(\n",
-    "        range=[-0.9, 19],\n",
+    "        range=[-5.8, 4.5],\n",
     "        showgrid=True,\n",
     "        gridcolor=\"white\",\n",
     "        gridwidth=1,\n",
@@ -477,7 +505,7 @@
     "    )\n",
     "\n",
     "    fig.update_yaxes(\n",
-    "        range=[-3, 3.3],\n",
+    "        range=[-4.8, 4.8],\n",
     "        showgrid=True,\n",
     "        gridcolor=\"white\",\n",
     "        gridwidth=1,\n",
@@ -491,7 +519,7 @@
     "\n",
     "    # 去掉所有 slider、frames、按钮，仅保留静态可视化\n",
     "    fig.update_layout(\n",
-    "        margin=dict(l=20, r=20, t=20, b=20),\n",
+    "        margin=dict(l=10, r=10, t=10, b=10),\n",
     "        showlegend=show_legend,\n",
     "        # height=600,\n",
     "        # width=900,\n",
@@ -503,7 +531,7 @@
     "\n",
     "    # 可写出 HTML\n",
     "    fig.write_html(\n",
-    "        \"./my_plot.html\",\n",
+    "        \"./convert_10step_spherical.html\",\n",
     "        full_html=True,\n",
     "        include_plotlyjs=\"cdn\"\n",
     "    )"
@@ -532,8 +560,8 @@
     "# zoom in to see they are really close\n",
     "visualize_2d_trajectories_plotly_static(\n",
     "\ttrajectories_dict={\n",
-    "        \"Straight RF\": euler_sampler_straight.trajectories, \n",
-    "        # \"Spherical RF\": euler_sampler_converted_spherical.trajectories\n",
+    "        # \"Straight RF\": euler_sampler_straight.trajectories, \n",
+    "        \"Spherical RF\": euler_sampler_converted_spherical.trajectories\n",
     "    },\n",
     "\tD1_gt_samples=D1[:1000],\n",
     "\tnum_trajectories=100,\n",
@@ -546,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 1000\n",
+    "num_samples = 5000\n",
     "mse_list = []\n",
     "steps_list = []\n",
     "\n",
@@ -560,7 +588,7 @@
     "    print(num_steps)\n",
     "\n",
     "# 第二段：60～100，步长10\n",
-    "for num_steps in range(21, 101, 10):\n",
+    "for num_steps in range(20, 101, 10):\n",
     "    euler_sampler_straight.sample_loop(seed=0, num_steps=num_steps, num_samples=num_samples)\n",
     "    euler_sampler_converted_spherical.sample_loop(seed=0, num_steps=num_steps, num_samples=num_samples)\n",
     "    mse = torch.mean((euler_sampler_straight.trajectories[-1] - euler_sampler_converted_spherical.trajectories[-1])**2)\n",
