minor fix to intro

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -72,7 +72,7 @@ $$
 where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introduces a trade-off between accuracy and computational cost: smaller $$\epsilon$$ yields high accuracy but incurs a larger number of calculation steps. Therefore, we should seek ODEs that can be approximated accurately even with large step sizes.
 
 <div class="l-body">
-  <figure id="figure-1">
+  <figure id="figure-1" style="text-align: center; margin: 0 auto;">
     <iframe src="{{ '/assets/plotly/intro_euler_method.html' | relative_url }}" 
           frameborder="0" 
           scrolling="no" 
@@ -85,8 +85,6 @@ where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introd
     </figcaption>
   </figure>
 </div>
-
-
 
 
 The ideal scenario arises when the ODE follows straight-line trajectories, in which case Euler approximation yields zero discretization error regardless of the choice of step sizes. In such cases, the ODE, up to time reparameterization, should satisfy:
@@ -151,7 +149,7 @@ In practice, the optimization in (3) can be efficiently solved even for large AI
 > In writing, we often omit the random seed. Whenever we take the expectation, it averages out all random sources inside the brackets except for those explicitly included in the conditioning.
 {: .theorem}
 
-<div class="l-page-outset">
+<div class="l-body">
   <figure id="figure-2">
     <iframe src="{{ '/assets/plotly/intro_rf_three_in_one.html' | relative_url }}" 
             frameborder="0" 
