Add main page thumbnail images

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -8,6 +8,10 @@ tags: tutorial
 giscus_comments: true
 date: 2024-12-06 10:00:00
 featured: true
+
+thumbnail: /assets/img/thumbnail/intro_thumbnail.png
+thumbnail_alt: "Thumbnail of Rectified Flow Intro"
+
 mermaid:
   enabled: true
   zoomable: true
@@ -21,7 +25,6 @@ tikzjax: true
 typograms: true
 bibliography: reference.bib
 
-# 如需添加作者信息，在下方添加authors字段
 authors:
   - name: Runlong Liao
     url: "mailto:rectifiedflow@googlegroups.com"
@@ -31,7 +34,6 @@ authors:
   - name: Bo Liu
   - name: Xixi Hu
 
-# 可选的目录配置
 toc:
   - name: "Overview"
   - name: "Problem: Learning Flow Generative Models"
