--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -18,6 +18,9 @@ chart:
 tikzjax: true
 typograms: true
 
+thumbnail: /assets/img/thumbnail/stochastic_sampler_thumbnail.png
+thumbnail_alt: "Thumbnail of Stochastic Samplers"
+
 bibliography: reference.bib
 
 authors:
