--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -57,6 +57,7 @@ For more introduction, please refer to the original papers<d-cite key="liu2022fl
 
 Generative modeling can be formulated as finding a computational procedure that transforms a noise distribution, denoted by $$\pi_0$$, into an unknown data distribution $$\pi_1$$ observed through data. In flow models, this procedure is represented by an ordinary differential equation (ODE):
 
+
 $$
 \dot{Z}_t = v_t(Z_t), \quad \forall t \in [0,1], \quad \text{starting from } Z_0 \sim \pi_0, \tag{1}
 $$
@@ -167,7 +168,7 @@ In practice, the optimization in (3) can be efficiently solved even for large AI
   </figure>
 </div>
 
-We illustrate the intuition in Fig.2(a):
+We illustrate the intuition in Fig.2:
 
 - Different trajectories of the interpolation process $$\{X_t\}$$ can intersect, causing multiple possible values of $$\dot{X}_t$$ for the same point $$X_t$$. 
   
@@ -249,6 +250,7 @@ which suggests that the average of $$S(\{Z_t^k\})$$ in the first $$K$$ steps dec
 
 Hence, we would obtain perfectly straight-line dynamics in the limit of $$k \to +\infty$$. Note that reflow can begin from any coupling $$(X_0, X_1)$$, so it provides a general procedure for straightening and thus speeding up any given dynamics while preserving the marginals.
 
-As shown in Fig.2 (b), after applying the "Reflow" operation, the trajectories become starighter than the original rectified flow $$Z_t$$.
+As shown in [Fig.2 (c)](#figure-2), after applying the "Reflow" operation, the trajectories become starighter than the original rectified flow $$Z_t$$.
 
 > **Reflow and Shoftcut Learning.** Intuitively, reflow resembles shortcut learning in humans: once we solve a problem for the first time, we learn to go directly to the solution, enabling us to solve it more quickly the next time. 
+{: .example}
