--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -66,28 +66,29 @@ where $$\dot{Z}_t = \mathrm dZ_t / \mathrm dt$$ denotes the time derivative, and
 
 It is important to note that, in all but trivial cases, there exist _infinitely many_ ODE transports from $$\pi_0$$ to $$\pi_1$$, provided that at least one such process exists. Thus, it is essential to be clear about which types of ODEs we should prefer.
 
-One option is to favor ODEs that are easy to solve at inference time. In practice, the ODEs are approximated using numerical methods, which typically construct piecewise linear approximations of the ODE trajectories. For instance, a common choice is Euler's method:
+One option is to favor ODEs that are easy to solve at inference time. In practice, the ODEs are approximated using numerical methods, which typically construct piecewise linear approximations of the ODE trajectories. For instance, a common choice is Euler method:
 
 $$
-\hat{Z}_{t+\epsilon} = \hat{Z}_t + \epsilon v_t(\hat{Z}_t), \quad \forall t \in \{0, \epsilon, 2\epsilon, \dots, 1\}, \tag{2}
+\hat{Z}_{t+\epsilon} = \hat{Z}_t + \epsilon \cdot v_t(\hat{Z}_t), \quad \forall t \in \{0, \epsilon, 2\epsilon, \dots, 1\}, \tag{2}
 $$
 
 where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introduces a trade-off between accuracy and computational cost: smaller $$\epsilon$$ yields high accuracy but incurs a larger number of calculation steps. Therefore, we should seek ODEs that can be approximated accurately even with large step sizes.
 
-<div class="l-body">
-  <figure id="figure-1" style="text-align: center; margin: 0 auto;">
-    <iframe src="{{ '/assets/plotly/intro_euler_method.html' | relative_url }}" 
-          frameborder="0" 
-          scrolling="no" 
-          height="310px" 
-          width="80%">
+<figure id="figure-1" style="margin: 1em auto;">
+  <div style="display: flex; justify-content: center;">
+    <iframe src="{{ '/assets/plotly/intro_euler_method.html' | relative_url }}"
+            frameborder="0"
+            scrolling="no"
+            height="310px"
+            width="60%">
     </iframe>
-    <figcaption>
-      <a href="#figure-1">Figure 1</a>.
-      Illustration of error accumulation in Euler method trajectories, starting from various initial points and deviating from the true solution curve over time.
-    </figcaption>
-  </figure>
-</div>
+  </div>
+  <figcaption>
+    <a href="#figure-1">Figure 1</a>.
+    Lady Windermere's fan for illustration of error accumulation in Euler method trajectories, starting from various initial points and deviating from the true solution curve over time.
+  </figcaption>
+</figure>
+
 
 
 The ideal scenario arises when the ODE follows straight-line trajectories, in which case Euler approximation yields zero discretization error regardless of the choice of step sizes. In such cases, the ODE, up to time reparameterization, should satisfy:
@@ -154,7 +155,7 @@ In practice, the optimization in (3) can be efficiently solved even for large AI
 {: .theorem}
 
 <div class="l-body">
-  <figure id="figure-2">
+  <figure id="figure-2" style="margin: 1em auto;">
     <iframe src="{{ '/assets/plotly/intro_rf_three_in_one.html' | relative_url }}" 
             frameborder="0" 
             scrolling="no" 
