--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -3,7 +3,6 @@ layout: distill
 title: "Flow Straight and Fast"
 description: Rectified flow learns ODEs as generative models while favoring straightness, by "causalizing" (or "rectifying") an interpolation process that smoothly connects noise and data.
 title: "Rectified Flow: An Introduction"
-description: Learning ODE Generative Models while Favoring Straightness
 teaser_image: /assets/images/rectified_flow_overview.png
 teaser_image_alt: "Overview of Rectified Flow"
 tags: tutorial
@@ -59,7 +58,6 @@ For more introduction, please refer to the original papers<d-cite key="liu2022fl
 
 Generative modeling can be formulated as finding a computational procedure that transforms a noise distribution, denoted by $$\pi_0$$, into an unknown data distribution $$\pi_1$$ observed through data. In flow models, this procedure is represented by an ordinary differential equation (ODE):
 
-
 $$
 \dot{Z}_t = v_t(Z_t), \quad \forall t \in [0,1], \quad \text{starting from } Z_0 \sim \pi_0, \tag{1}
 $$
@@ -81,8 +79,9 @@ where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introd
     <iframe src="{{ '/assets/plotly/intro_euler_method.html' | relative_url }}"
             frameborder="0"
             scrolling="no"
-            height="310px"
-            width="60%">
+            height="300px"
+            width="100%"
+            style="max-width: 400px;">
     </iframe>
   </div>
   <figcaption>
@@ -90,6 +89,7 @@ where $$\epsilon > 0$$ is a step size. Varying the step size $$\epsilon$$ introd
     Lady Windermere's fan for illustration of error accumulation in Euler method trajectories, starting from various initial points and deviating from the true solution curve over time.
   </figcaption>
 </figure>
+
 
 
 
