--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -1,12 +1,11 @@
 ---
 layout: distill
 title: "Flow Straight and Fast"
-description: Rectified flow learns ODEs as generative models while favoring straightness, by "causalizing" (or "rectifying") an interpolation process that smoothly connects noise and data.
-title: "Rectified Flow: An Introduction"
+description: Rectified flow learns ODEs as generative models while favoring straightness, by causalizing (or rectifying) an interpolation process that smoothly connects noise and data.
 teaser_image: /assets/images/rectified_flow_overview.png
 teaser_image_alt: "Overview of Rectified Flow"
 tags: tutorial
-giscus_comments: true
+giscus_comments: true 
 date: 2024-12-06 10:00:00
 featured: true
 
@@ -27,8 +26,13 @@ typograms: true
 bibliography: reference.bib
 
 authors:
-  - name: "Runlong Liao, Bo Liu, Xixi Hu, Qiang Liu (UT Austin,  <rectifiedflow@gmail.com>)"
-
+  - name: Runlong Liao
+    url: "mailto:rectifiedflow@gmail.com"
+    affiliations:
+      name: UT Austin
+  - name: Bo Liu
+  - name: Xixi Hu
+  - name: Qiang Liu
 
 toc:
   - name: "Overview"
@@ -104,7 +108,7 @@ Rectified flow works in the following ways:
 
 - **Build Interpolation:**
   
-  We build an interpolation process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$ that smoothly interpolates between $$X_0$$ and $$X_1$$. Given the perference on straight trajectories, there seems no immediate reason to not use the canonical straight-line interpolation:
+  The first step is to build an interpolation process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$ that smoothly interpolates between $$X_0$$ and $$X_1$$. Given the perference on straight trajectories, there seems no immediate reason to not use the canonical straight-line interpolation:
 
   $$
   X_t = t X_1 + (1 - t) X_0.
