Update blog figures

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -9,7 +9,7 @@ giscus_comments: true
 date: 2024-12-06 10:00:00
 featured: true
 
-thumbnail: /assets/img/thumbnail/intro_thumbnail.png
+thumbnail: /assets/img/rectified_flow.gif
 thumbnail_alt: "Thumbnail of Rectified Flow Intro"
 
 mermaid:
@@ -107,19 +107,21 @@ Rectified flow works in the following ways:
 
 - **Build Interpolation:**
   
+
 The first step is to build an interpolation process $$\{X_t\} = \{X_t : t \in [0, 1]\}$$ that smoothly interpolates between $$X_0$$ and $$X_1$$. Given the perference on straight trajectories, there seems no immediate reason to not use the canonical straight-line interpolation:
 
-  $$
+$$
   X_t = t X_1 + (1 - t) X_0.
-  $$
-  
+$$
+
 Here the interpolation $$\{X_t\}$$ is a stochastic process generated in an **"anchor-and-bridge"** way: we first sample the endpoints $$X_0$$ and $$X_1$$ and then sample the intermediate trajectory connecting them.
 
 
 - **Marginal Matching:**  
   
+
 By construction, the marginal distributions of $$X_0$$ and $$X_1$$ match the target distributions $$\pi_0$$ and $$\pi_1$$ through the interpolation process $$\{X_t\}$$. However, $$\{X_t\}$$ is not a causal ODE process like $$\dot{Z}_t = v_t(Z_t)$$, which generate the output $$Z_1$$ by evolving forward in time from $$Z_0$$. Instead, generating $$X_t$$ requires knowledge of both $$X_0$$ and $$X_1$$, rather than evolving solely from $$X_0$$ as $$t$$ increases. 
-   
+
 This issue can be resolved if we can convert $$\{X_t\}$$ somehow into a causal ODE process while preserving the marginal distributions of $$X_t$$ at each time $$t$$. Note that since we only care about the output $$X_1$$, we only need to match the marginal distributions of $$X_t$$ at each individual time $$t$$. There is no need to match the trajectory-wise joint distribution of $$\{X_t\}$$.
 
 Perhaps surprisingly, marginal matching can be achieved by simply training the velocity field $$v_t$$ of the ODE model $$\dot{Z}_t = v_t(Z_t)$$ to match the slope $$\dot{X}_t$$ of the interpolation process via:
@@ -252,7 +254,7 @@ $$
 $$
 
 which suggests that the average of $$S(\{Z_t^k\})$$ in the first $$K$$ steps decay with an $$\mathcal{O}(1 / K)$$ rate.  
- 
+
  Note that reflow can begin from any coupling $$(X_0, X_1)$$, so it provides a general procedure for straightening and thus speeding up any given dynamics while preserving the marginals.
 
 As shown in [Fig.2 (c)](#figure-2), after applying the "Reflow" operation, the trajectories become starighter than the original rectified flow $$Z_t$$.
